# rust-projects

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
android-dioxus/mobile/: Makefile
android-rif/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  Makefile  README.md  pubspec.yaml
android-rif/.dart_tool/: package_config.json  package_config_subset
android-rif/lib/: main.dart
android-rif/messages/: tutorial_message.proto
leptons/: Cargo.toml
leptons/src/: app.rs  main.rs
leptos/: Cargo.toml  Makefile  README.md  Trunk.toml  app.css  index.html  rust-toolchain.toml
leptos/src/: _app.module.scss  app.module.scss  app.rs  css.rs  main.rs  storage.rs
leptos/src/components/: audio.rs  form.rs  home.rs  input.rs  login.rs  mod.rs  qr.rs
leptos/styles/: app.scss
