[workspace]
resolver = "2"
members = [ "leptos" ]

[workspace.dependencies]
anyhow = "1.0.95"
dotenvy = "0.15.7"
itertools = "0.14.0"
rand = "0.9.0"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
strum = "0.26.3"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
